--- a/playground.ipynb
+++ b/playground.ipynb
@@ -14,46 +14,55 @@
      ],
      "language": "python",
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pyglet.clock"
-     ],
-     "language": "python",
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "<pyglet._ModuleProxy at 0x7c4d550>"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "pyglet.image.create(100,100)",
-      "pyglet.graphics.draw(2, pyglet.gl.GL_POINTS,",
-      "    ('v2i', (10, 15, 30, 35))",
-      ")",
-      "pyglet.app.run()"
+      "",
+      "win=pyglet.window.Window(200, 200)"
      ],
      "language": "python",
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "window = pyglet.window.Window(visible=False)",
+      "window = pyglet.window.Window(caption='Initial caption')",
+      "# ... perform some additional initialisation"
+     ],
+     "language": "python",
+     "outputs": [],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      ""
+      "window.set_visible()"
      ],
+     "language": "python",
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "window.set_caption('A different caption')"
+     ],
+     "language": "python",
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [],
      "language": "python",
      "outputs": []
     }
